--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "type": "module",
   "description": "[![Actions Status](https://github.com/artem-mar/frontend-project-lvl1/workflows/hexlet-check/badge.svg)](https://github.com/artem-mar/frontend-project-lvl1/actions)",
   "main": "index.js",
+  "bin": {
+    "brain-games": "bin/brain-games.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,5 +19,11 @@
   "bugs": {
     "url": "https://github.com/artem-mar/frontend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/artem-mar/frontend-project-lvl1#readme"
+  "homepage": "https://github.com/artem-mar/frontend-project-lvl1#readme",
+  "devDependencies": {
+    "eslint": "^8.11.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.4",
+    "prettier": "^2.5.1"
+  }
 }
